syntax = "proto3";

package grpcservice;

option go_package = "testgrpc.com/grpcservice";

service GrpcService {
  rpc DeployApp(stream AppChunk) returns (AppProgress) {}
  rpc StartApp (StartAppRequest) returns (StartAppResponse) {}
  rpc StopApp (StopAppRequest) returns (StopAppResponse) {}
  rpc PutFile(stream FileChunk) returns (FileProgress) {}
  rpc GetFile(FileProgress) returns (stream FileChunk) {}
}

message StartAppRequest {
	string message = 1;
}

message StartAppResponse {
	string result = 1;
}

message StopAppRequest {
	string id = 1;
}
 
message StopAppResponse {
	string result = 1;
}

message AppChunk {
	string appname = 1;
	string filename = 2;
	bytes packet = 3;
	int32 byteCount = 4;
}

message AppProgress {
	string appname = 1;
	string filename = 2;
	int32 bytesTransfered = 3;
}

message FileChunk {
	string filename = 1;
	bytes packet = 2;
	int32 byteCount = 3;
}

message FileProgress {
	string filename = 1;
	int32 bytesTransfered = 2;
}
